--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 
 # See https://help.github.com/articles/ignoring-files for more about ignoring files.
+orm.log
+orm.test.log
+test_data.json.backup
+
 
 # Ignore bundler config.
 /.bundle
