--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,5 @@ jobs:
       with:
         ruby-version: 3.2.0
 
-    - name: Install dependencies from gemspec
-      run: bundle install
-
     - name: Minitest
-      run: bundle exec rake test
+      run: rake test
